[package]
name = "leetcode-picker"
version = "0.1.6"
authors = ["ccQpein"]
edition = "2018"
description = "Command line app for picking leetcode quiz"
license = "MIT"
repository = "https://github.com/ccqpein/leetcode-picker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
emacs-support = ["emacs"]

[dependencies]
reqwest = {version = "0.11",features = ["blocking", "json", "cookies"]}
scraper = "0.12.0"
ego-tree = "^0.6"
regex = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
clap = "3.0.0-beta.2"
question = "0.2.2"
tinytemplate = "1"

# emacs support
emacs = {version = "0.15", optional = true}

#[dev-dependencies]
#emacs-rs-module = { version = "0.13" }